MODOKAPFAC-3: Fixed Sonar warnings.